--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/dgading/cypress-presentation#readme",
   "devDependencies": {
+    "@testing-library/cypress": "^7.0.4",
     "cypress": "^6.6.0"
   }
 }
