--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "homepage": "https://github.com/dgading/cypress-presentation#readme",
   "devDependencies": {
     "@testing-library/cypress": "^7.0.4",
-    "cypress": "^6.6.0"
+    "axe-core": "^4.1.3",
+    "cypress": "^6.6.0",
+    "cypress-axe": "^0.12.2"
   }
 }
